force-app/main/default/objects/ByPass_Triggers__c/ByPass_Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ByPass Triggers</label>
</CustomObject>