force-app/main/default/objects/ByPass_Triggers__c/fields/ByPass_Brand_PermissionTrigger__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Brand_PermissionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Brand PermissionTrigger</label>
    <type>Checkbox</type>
</CustomField>