force-app/main/default/objects/ByPass_Triggers__c/fields/ByPass_Triggers__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Triggers</label>
    <type>Checkbox</type>
</CustomField>