force-app/main/default/objects/ByPass_Triggers__c/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <defaultValue>&apos;ALL&apos;</defaultValue>
    <inlineHelpText>Allows users to bypass Names Triggers (if name = ALL bypasses  all triggers)</inlineHelpText>
    <label>Trigger Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>